workspace/compiler/tests/snapshots/test_snap_go__go_interfaces_rendered_w40.snap
---
source: workspace/compiler/tests/snap_go.rs
assertion_line: 233
expression: rendered
---
// example.com/interfaces
// Package interfaces exercises Go interface declarations, embedded interfaces, generics (Go 1.18+ type parameters), and constraint type sets.
// <unrendered module>

// example.com/interfaces::Closer
// Closer closes a resource.
type Closer interface {
    Close() error
}

// example.com/interfaces::Container
// Container is a generic interface constrained to ordered types (Go 1.18+).
// 
// T must satisfy the Ordered constraint.
type Container[
    T example.com/interfaces.Ordered
] interface {
    Add(item T)
    Get(i int) T
    Len() int
}

// example.com/interfaces::Map
// Map is a named type over a generic map, demonstrating type params on a named type.
type Map[K comparable, V any] struct {
    Field0 map[K]V
}

// example.com/interfaces::Ordered
// Ordered is a constraint type set: integers, floats, and strings.
type Ordered interface {}

// example.com/interfaces::ReadWriteCloser
// ReadWriteCloser embeds all three.
type ReadWriteCloser interface {
    Close() error
    Read(p []byte) (n int, err error)
    Write(p []byte) (n int, err error)
}

// example.com/interfaces::ReadWriter
// ReadWriter embeds both Reader and Writer (method-set union via embedding).
type ReadWriter interface {
    Read(p []byte) (n int, err error)
    Write(p []byte) (n int, err error)
}

// example.com/interfaces::Reader
// Reader is a simple exported interface.
// 
// It has one required method with a single parameter.
type Reader interface {
    Read(p []byte) (n int, err error)
}

// example.com/interfaces::Stack
// Stack is a generic struct implementing a container pattern.
// 
// Items are stored in a slice and the zero value is ready to use.
type Stack[T any] struct {
    Items []T
}

// example.com/interfaces::Stack.Pop
// Pop removes and returns the top item, and whether it was present.
func Pop[T any]() (T, bool)

// example.com/interfaces::Stack.Push
// Push adds an item to the top of the stack with a pointer receiver.
func Push[T any](item T)

// example.com/interfaces::Stringer
// Stringer is a common single-method interface with no parameters.
type Stringer interface {
    String() string
}

// example.com/interfaces::Transform
// Transform applies a function to every item in a slice and returns results.
// 
// This exercises a top-level generic function with multiple type parameters.
func Transform[
    In any,
    Out any
](items []In, fn any) []Out

// example.com/interfaces::Writer
// Writer is a complementary interface.
type Writer interface {
    Write(p []byte) (n int, err error)
}

// example.com/interfaces::unexportedHelper
// unexportedHelper is private and should lower with unexported visibility.
func unexportedHelper(s string) string
