workspace/compiler/tests/snapshots/test_snap_go__go_multipackage_rendered_w80.snap
---
source: workspace/compiler/tests/snap_go.rs
assertion_line: 217
expression: rendered
---
// example.com/multipackage
// Package multipackage is the root package of a multi-package module.
// <unrendered module>

// example.com/multipackage/sub
// Package sub is a sub-package within the multipackage module.
// 
// It demonstrates that the context assembles multi-package modules correctly.
// <unrendered module>

// example.com/multipackage/sub::Helper
// Helper provides utility operations for the parent module.
type Helper struct {
    Name string
}

// example.com/multipackage/sub::Helper.Describe
// Describe returns a description string with a value receiver.
func Describe() string

// example.com/multipackage/sub::Helper.Run
// Run executes the helper's primary action.
func Run() error

// example.com/multipackage/sub::New
// New constructs a Helper.
func New(name string) *example.com/multipackage/sub.Helper

// example.com/multipackage::NewRegistry
// NewRegistry creates an empty registry.
func NewRegistry() *example.com/multipackage.Registry

// example.com/multipackage::Registry
// Registry holds key-value entries.
type Registry struct {
    Entries map[string]string
}

// example.com/multipackage::Registry.Get
// Get retrieves the value for key.
func Get(key string) (string, bool)

// example.com/multipackage::Registry.Set
// Set stores a value under key.
func Set(key string, value string)
